# elog

./: CMakeLists.txt  README.md  elog_config.h.in
include/elog/: elog.h
src/: elog.c
